# cse-lint

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
src/: check.rs  fix.rs  main.rs  model.rs  render.rs  report.rs  scaffold.rs  source.rs
