[package]
name = "cse-lint"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Constructive Substrate Engineering audit linter — measures CSE adherence across the pleme-io fleet"
repository = "https://github.com/pleme-io/cse-lint"


[package.metadata.pleme]
description = "cse-lint — Constructive Substrate Engineering audit linter"

[[bin]]
name = "cse-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
